code/tui/snapshots/fullscreen/marketplace/marketplace_catalog_offline.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Extensions ───────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Skills    Marketplace    MCP    Hooks    Plugins                      │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search Marketplace; Enter to search                                │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  server error -32000: Catalog offline                                   │             
            │> official                                                             - │             
            │  Skills ─────────────────────────────────────────────────────────────── │             
            │  web@official                                                         + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  / search · ←/→ details · i install · r refresh                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
