code/tui/snapshots/fullscreen/marketplace/marketplace_chinese_command_completion.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: "format!(\"{}\\n\\n{hint}\", completion.trim_end_matches(' '))"
---
  .                                                                                       [仪 表 盘 ]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ─────────────────────────────────────────────────────────────────────────────────────────── 1/2   
  /marketplace               查 找 和 安 装 扩 展 市 场 中 的 包                                                
  /cd                        将 此 会 话 移 至 新 的 工 作 目 录                                                
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > /market                                                                                         
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  ⏸ 手 动

  .                                                                                       [仪 表 盘 ]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > /marketplace <搜 索 词 >                                                                           
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  ⏸ 手 动
